--- a/web_source/_quarto.yml
+++ b/web_source/_quarto.yml
@@ -1,6 +1,9 @@
 project:
   type: website
-  output-dir: _site
+  resources: ../web_resources/*
+  output-dir: ../_site
+  # pre-render: 
+  # post-render:
  
 website:
   title: "ECHILD"
