--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,12 +64,12 @@ jobs:
         with:
           path: web_source/
 
-#      - name: Upload artifact
-#        uses: actions/upload-pages-artifact@v2
+     - name: Upload artifact
+       uses: actions/upload-pages-artifact@v2
 
       # - name: Deploy to cloudflare
       #   uses: cloudflare/wrangler-action@v3
-      #   with:
+      #   with:g
       #     apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
       #     accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       #     command: pages deploy ./_site --project-name=echild --commit-dirty=true
