--- a/web_source/_quarto.yml
+++ b/web_source/_quarto.yml
@@ -9,11 +9,10 @@ website:
   title: "ECHILD"
   image: "android-chrome-512x512.png"
   favicon: "favicon.ico"
-  google-analytics: "G-YMFX7T0CQN"
   open-graph: true
   twitter-card: true
-  site-url: https://www.echild.ac.uk
-  # repo-url: https://github.com/UCL-ECHILD/UCL-ECHILD.github.io
+  # site-url: https://dpshelio.github.io/www.echild.ac.uk-website
+  repo-url: https://github.com/dpshelio/www.echild.ac.uk-website
   # repo-subdir: web_source/
   # issue-url: https://github.com/UCL-ECHILD/echild-rd/issues/new/choose
   # repo-actions: [edit, issue]
