--- a/web_source/_quarto.yml
+++ b/web_source/_quarto.yml
@@ -39,7 +39,7 @@ website:
     left:
       - href: index.qmd
         text: Overview
-    #  - researchers.qmd
+      - researchers.qmd
     tools:
       - icon: twitter
         href: https://twitter.com/ucl_echild
